chore: Dockerize project and migrate to Java 25 monorepo structure